--- a/style.css
+++ b/style.css
@@ -69,3 +69,24 @@ h1 {
 .hole.up .mole {
   top: 0;
 }
+
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgb(112, 66, 54);
+  height: 8rem;
+  font-size: 3rem;
+  color: antiquewhite;
+  width: 17rem;
+  border-radius: 100px;
+  box-shadow: 2px 2px 20px 2px black;
+}
+
+.startHolder {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 5rem;
+  height: 30em;
+}
