--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ h1 {
 
 .hole:after {
   display: block;
-  background: url(dirt.svg) bottom center no-repeat;
+  background: url(./assets/dirt.svg) bottom center no-repeat;
   background-size: contain;
   content: "";
   width: 100%;
@@ -57,7 +57,7 @@ h1 {
 }
 
 .mole {
-  background: url("mole.svg") bottom center no-repeat;
+  background: url("./assets/mole.svg") bottom center no-repeat;
   background-size: 60%;
   position: absolute;
   top: 100%;
@@ -81,12 +81,5 @@ h1 {
   width: 17rem;
   border-radius: 100px;
   box-shadow: 2px 2px 20px 2px black;
-}
-
-.startHolder {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 5rem;
-  height: 30em;
+  position: relative;
 }
